--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- NAVIGATION  -->
     <div class="navigation">
         <img src="/img/wiper_logo.png" alt="wiper logo" class="logo">
+        <div class="iconHamburger"><i class="fas fa-bars"></i></div>
         <ul class="menuList">
             <li class="menuBars"><a href="#">Home</a></li>
             <li class="menuBars"><a href="#">About</a></li>
@@ -32,7 +33,7 @@
     <section class="header">
         <div class="headerTitle">
             <h1>we build the future</h1>
-            <h2>best ideas - best solutions - best resolts</h2>
+            <h2>est ideas - Best solutions - Best resolts</h2>
             <a href="#" class="headerButton">view more</a>
         </div>
     </section>
